turtleart.housetree.HouseTree.scala.error
Erreur de compilation :
HouseTree:2: error: '<-' expected but ')' found.
  for(i<1 to 4){
              ^HouseTree:5: error: illegal start of simple expression
}
^